--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -18,6 +18,12 @@
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
+        android:id="@+id/navigation_keranjang"
+        android:name="com.wahyurhy.marketplace.ui.keranjang.KeranjangFragment"
+        android:label="@string/title_keranjang"
+        tools:layout="@layout/fragment_keranjang" />
+
+    <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.wahyurhy.marketplace.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
