--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,22 +17,24 @@
             android:id="@+id/tv_status"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:gravity="center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:textSize="18sp"
-            android:text="@string/sudah_login" />
+            android:text="@string/sudah_login"
+            android:textSize="@dimen/_18ssp" />
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login"/>
+            android:text="@string/login"
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/btn_logout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/logout"/>
+            android:text="@string/logout"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
