--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_15sdp"
@@ -34,6 +35,7 @@
             app:passwordToggleEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edt_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
@@ -54,6 +56,7 @@
             android:textColor="@color/colorPrimary" />
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_masuk"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_45sdp"
             android:text="@string/masuk"
@@ -70,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/text1"
+                android:layout_toStartOf="@+id/text1"
                 android:background="#CACACA" />
 
             <TextView
@@ -86,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/text1"
+                android:layout_toEndOf="@+id/text1"
                 android:background="#CACACA" />
 
         </RelativeLayout>
